# protpingu

./: .gitignore  NOTICE  pyproject.toml
src/protpingu/: config.py  pinger.py
src/protpingu/cmd/: check_products.py
src/protpingu/notifier/: __init__.py  email.py
src/protpingu/notifier/templates/: notify_email.html
