[project]
name = "protpingu"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishvic Pushpakaran",email = "rishvic@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "marshmallow (>=4.0.0,<5.0.0)",
]

[tool.poetry]
packages = [{include = "protpingu", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
